# sms

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/Courses/: Courses.cpp  Courses.h
src/Timetable/: TimeTable.cpp  TimeTable.h
src/attendance/: attendance.cpp  attendance.h
src/core/: init.cpp  init.h  menu.cpp  menu.h  view.cpp  view.h
src/core/auth/: User.cpp  User.h
src/core/db/: base.cpp  base.h
src/courses/: courses.cpp  courses.h
src/database/: handler.cpp  handler.h
